--- a/web/modules/styles/root.scss
+++ b/web/modules/styles/root.scss
@@ -1,6 +1,3 @@
-html, body {
-    overflow: hidden;
-}
 html, input[type=text] {
     font-family: 'Inconsolata', monospace;
 }
@@ -10,10 +7,14 @@ html, input[type=text] {
 }
 
 main {
-    margin: 5px;
+    box-sizing: border-box;
+}
+
+.command-list, .editor {
+    overflow-y: scroll;
+    height: 100vh;
 }
 
 .command-list {
-    height: 100vh;
-    overflow-y: scroll;
+    padding: 5px;
 }
