--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -26,3 +26,24 @@ h1 {
         color: $red;
     }
 }
+
+main {
+    position: absolute;
+    top: 49px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: scroll;
+}
+
+.docs {
+    max-width: 800px;
+    padding: 40px 20px;
+    margin: 0 auto;
+    @media only screen and (max-width: 650px) {
+        padding: 10px;
+    }
+    pre {
+        white-space: pre-wrap;
+    }
+}
