--- a/web/modules/styles/menu.scss
+++ b/web/modules/styles/menu.scss
@@ -1,8 +1,6 @@
 .menu {
-    position: fixed;
+    height: 48px;
     display: flex;
-    top: 0;
-    left: 0;
     width: 100%;
     z-index: 1;
     background-color: white;
@@ -13,7 +11,6 @@
         font-size: 20px;
         padding: 10px 40px;
 
-        transition: padding 0.2s ease;
         @media only screen and (max-width: 650px) {
             padding: 10px;
         }
