--- a/web/modules/styles/menu.scss
+++ b/web/modules/styles/menu.scss
@@ -2,7 +2,7 @@
     height: $nav-height;
     display: flex;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     background-color: white;
     justify-content: center;
     border-bottom: 5px solid $brand;
@@ -10,6 +10,9 @@
         display: block;
         font-size: 20px;
         padding: 10px 40px;
+        &:focus {
+            outline: none;
+        }
 
         @media only screen and (max-width: 650px) {
             padding: 10px;
