--- a/web/modules/styles/cmds.scss
+++ b/web/modules/styles/cmds.scss
@@ -1,12 +1,15 @@
 .main-cmds {
     overflow: hidden;
     height: calc(100% - #{$nav-height});
+    display: flex;
 }
 
-.cmds {
+.cmd-editor {
+    padding: 10px;
+}
+
+.cmd-menu {
     border-radius: 5px;
-    // border: 5px solid $brand;
-    // margin: 10px;
     padding: 10px;
     width: 30%;
     height: 100%;
