--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -8,13 +8,19 @@
 html, body, input, button {
     font-family: Hack;
     font-size: 14px;
-    margin: none;
+    line-height: 1.15;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 a {
     color: $brand;
     text-decoration: none;
     font-weight: 700;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 h1 {
