--- a/web/modules/styles/cmds.scss
+++ b/web/modules/styles/cmds.scss
@@ -12,7 +12,7 @@
 .cmd-menu {
     border-radius: 5px;
     padding: 10px;
-    width: 30%;
+    min-width: 30%;
     height: 100%;
     display: flex;
     flex-direction: column;
