--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -41,6 +41,15 @@ h1 {
     }
 }
 
+button {
+    background-color: $brand;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 2px;
+    color: white;
+}
+
 .star {
     color: $green;
 }
@@ -48,7 +57,7 @@ h1 {
 input {
     background-color: $brand;
     color: white;
-    padding: 10px 10px;
+    padding: 10px;
     border: 0;
     border-radius: 2px;
     width: 100%;
