--- a/web/modules/styles/cmds.scss
+++ b/web/modules/styles/cmds.scss
@@ -6,16 +6,30 @@
 
 .cmd-editor {
     padding: 10px;
-    width: 100%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
 }
+
+// on mobile: overflow hidden scroll no on cmd list
 
 .cmd-menu {
     border-radius: 5px;
     padding: 10px;
-    min-width: 30%;
+    width: 30%;
+    max-width: 350px;
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+@media only screen and (min-width: 1200px) {
+    .cmd-menu {
+        width: 350px;
+    }
+    .cmd-editor {
+        width: calc(100% - 350px);
+    }
 }
 
 .cmd-filter {
