fixed font, fixed saving

--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -6,7 +6,7 @@
 @import './cmds';
 
 html, body, input, button {
-    font-family: Hack;
+    font-family: Hack, monospace;
     font-size: 14px;
     line-height: 1.15;
     margin: 0;
