--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -4,6 +4,7 @@
 @import './menu';
 @import './docs';
 @import './cmds';
+@import './stats';
 
 html, body, input, button {
     font-family: Hack, monospace;
