--- a/web/modules/styles/stats.scss
+++ b/web/modules/styles/stats.scss
@@ -1,4 +1,7 @@
 .stats {
+    padding-top: 60px;
+
+    // svg stuff
     .bar {
         fill: $green;
     }
@@ -18,8 +21,46 @@
         fill: $brand;
     }
 
-    $filter-height: 48px;
-    padding-top: $filter-height;
+    // common
+
+    .title {
+        margin: 0 16px 16px 0;
+        text-align: right;
+    }
+
+    .row {
+        display: flex;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    // layout
+
+    .base {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 25px;
+        h4 {
+            margin-top: none;
+        }
+    }
+
+    .command-chart {
+        width: 75%;
+    }
+
+    @media only screen and (max-width: 780px) {
+        .command-chart, .base {
+            width: auto;
+        }
+        .row {
+            display: block;
+        }
+    }
+
 }
 
 .stats-filter {
