--- a/web/modules/styles/stats.scss
+++ b/web/modules/styles/stats.scss
@@ -1,6 +1,6 @@
 .stats {
     padding-top: 60px;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
 
     // svg stuff
@@ -37,6 +37,10 @@
 
     // layout
 
+    .half {
+        width: 50%;
+    }
+
     .base {
         width: 25%;
         display: flex;
@@ -59,6 +63,9 @@
         }
         .row {
             display: block;
+        }
+        .half {
+            width: initial;
         }
     }
 
