--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -119,7 +119,7 @@ hr {
     border-bottom: 5px solid $brand;
 }
 
-::placeholder {
+input::placeholder {
     font-weight: 400;
     font-style: italic;
     color: white;
