--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -1,8 +1,8 @@
 @import './variables';
 @import './typography';
+@import './document';
 @import './codemirror';
 @import './menu';
-@import './docs';
 @import './cmds';
 @import './stats';
 
