--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -91,8 +91,9 @@ button {
         top: 5px;
         pointer-events: none;
     }
-    select {
+    select, .input {
         padding: 2px;
+        margin: 0;
         width: 100%;
         border: none;
         background-color: $brand;
