--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -12,6 +12,7 @@ html, body, input, button, select {
     line-height: 1.15;
     margin: 0;
     box-sizing: border-box;
+    overflow-anchor: none;
 }
 
 a {
