--- a/web/modules/styles/menu.scss
+++ b/web/modules/styles/menu.scss
@@ -6,6 +6,7 @@
     background-color: white;
     justify-content: center;
     border-bottom: 5px solid $brand;
+    overflow: hidden;
     a {
         display: block;
         font-size: 20px;
