--- a/web/modules/styles/stats.scss
+++ b/web/modules/styles/stats.scss
@@ -1,3 +1,4 @@
+
 .stats-container {
     &.loading {
         pointer-events: none;
@@ -118,5 +119,25 @@
 }
 
 .stats-forcesim {
-    border-top: 5px solid $red;
+    & > h4 {
+        padding-left: 25px;
+        padding-top: 20px;
+    }
+    & > span {
+        padding-left: 50px;
+        padding-bottom: 20px;
+        display: block;
+    }
+    .sim {
+        border-top: 5px solid $red;
+        position: relative;
+    }
+    .hud {
+        position: absolute;
+        top: 25px;
+        left: 27px;
+    }
+    .canvas {
+        overflow: hidden;
+    }
 }
