--- a/web/modules/styles/stats.scss
+++ b/web/modules/styles/stats.scss
@@ -150,7 +150,7 @@
         cursor: default;
         pointer-events: none;
         background-color: rgba($brand, 0.7);
-        // color: white;
+        color: white;
         padding: 5px;
         display: none;
         &.visible {
