added events to the web UI

--- a/web/modules/styles/main.scss
+++ b/web/modules/styles/main.scss
@@ -65,6 +65,11 @@ button {
     line-height: 1;
 }
 
+.event {
+    color: steelblue;
+    font-size: 10px;
+}
+
 .checkbox {
     border: 2px solid $brand;
     border-radius: 2px;
