--- a/web/modules/styles/typography.scss
+++ b/web/modules/styles/typography.scss
@@ -2,28 +2,28 @@
 
 @font-face {
   font-family: 'Hack';
-  src: url('./fonts/hack-regular-subset.woff2') format('woff2');
+  src: url('/hack-regular-subset.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Hack';
-  src: url('./fonts/hack-bold-subset.woff2') format('woff2');
+  src: url('/hack-bold-subset.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Hack';
-  src: url('./fonts/hack-italic-subset.woff2') format('woff2');
+  src: url('/hack-italic-subset.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Hack';
-  src: url('./fonts/hack-bolditalic-subset.woff2') format('woff2');
+  src: url('/hack-bolditalic-subset.woff2') format('woff2');
   font-weight: 700;
   font-style: italic;
 }
